--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -5,19 +5,20 @@
   &__author,
   &__periods {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 10vw;
   }
 
   &__author {
-    background-color: lightpink;
+    background-color: black;
+    color: white;
+    padding: 5rem 8rem;
   }
 
   &__periods {
-    background-color: black;
-    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
     font-size: 40vw;
     position: absolute;
     width: 100%;
@@ -28,7 +29,7 @@
   &__period {
     width: 5vw;
     height: 5vw;
-    background-color: white;
+    background-color: black;
     border-radius: 50%;
     margin: 0 3rem;
     display: inline-block;
