--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,9 @@
 //Breakpoints
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
+
+//Colors
+$primary-blue: #5cc8ff;
+$dark-background: #051928;
+$light-background: #eef5ff;
+$accents-color: #ffb51c;
