--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,4 +1,5 @@
 @use '../../styles/mixin' as *;
+@use '../../styles/variables' as *;
 
 .landing {
   position: relative;
@@ -11,16 +12,18 @@
   }
 
   &__author {
-    background-color: black;
-    color: white;
+    background-color: $dark-background;
+    color: $light-background;
     padding: 5rem 8rem;
+
+    @include desktop {
+      padding-top: 12rem;
+    }
   }
 
   &__periods {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
+    @include flex-layout(row, center, center);
+    background-color: $light-background;
     font-size: 40vw;
     position: absolute;
     width: 100%;
@@ -31,7 +34,7 @@
   &__period {
     width: 5vw;
     height: 5vw;
-    background-color: black;
+    background-color: $dark-background;
     border-radius: 50%;
     margin: 0 3rem;
     display: inline-block;
@@ -39,6 +42,13 @@
 
   &__name {
     @include header-typography;
-    font-size: 14rem;
+
+    @include desktop {
+      font-size: 16rem;
+      font-weight: 400;
+      line-height: 13rem;
+    }
+
+    @include flex-layout(row, center, center);
   }
 }
