contact banner jsx and styling done

--- a/src/components/Contact/ContactForm/ContactForm.scss
+++ b/src/components/Contact/ContactForm/ContactForm.scss
@@ -1,4 +1,4 @@
-@use '../../styles/mixin' as *;
+@use '../../../styles/mixin' as *;
 
 .contact-form {
   @include flex-layout(column, center, center);
