--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,4 @@ $desktop-breakpoint: 1280px;
 $primary-blue: #5cc8ff;
 $dark-background: #051928;
 $light-background: #eef5ff;
-$accents-color: #ffb51c;
+$accent-color: #ffb51c;
