--- a/src/components/Contact/ContactBanner/ContactBanner.scss
+++ b/src/components/Contact/ContactBanner/ContactBanner.scss
@@ -8,6 +8,7 @@
     border-top: 1px solid $dark-background;
     border-bottom: 1px solid $dark-background;
     overflow: hidden;
+    background-color: $light-background;
   }
 
   &__content {
@@ -20,7 +21,7 @@
     color: $dark-background;
     font-weight: 400;
     font-size: 7vw;
-    letter-spacing: -0.45vw;
+    letter-spacing: -0.25vw;
     white-space: nowrap;
 
     @include desktop {
@@ -38,7 +39,7 @@
     padding: 0 1rem;
     transition: color 0.3s;
     font-size: 6.5vw;
-    letter-spacing: 0;
+    letter-spacing: -0.1vw;
 
     @include desktop {
       font-size: 3.5vw;
