--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -27,6 +27,7 @@ body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow: hidden;
 }
 /*
     6. Improve media defaults
