--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -36,6 +36,23 @@
     box-shadow: rgb(0 0 0 / 40%) 0px 10px 14px -5px;
     border-radius: 10px;
     max-width: 500px;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+
+    &:hover,
+    &:focus,
+    &:after {
+      box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+      -webkit-transform: scale(1.1);
+      transform: scale(1.05);
+    }
 
     @include tablet {
       max-width: 1000px;
@@ -77,6 +94,19 @@
     padding: 0.5rem 1rem;
     box-shadow: rgb(0 0 0 / 30%) 0px 4px 14px -1px;
     border-radius: 5px;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow;
+    transition-property: box-shadow;
+
+    &:hover,
+    &:active,
+    &:focus {
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    }
   }
 
   &__img {
