--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,4 +1,6 @@
 .menu {
+  display: none;
+
   &__item {
     color: white;
     list-style: none;
@@ -8,4 +10,8 @@
   &__resume {
     color: white;
   }
+}
+
+.menu-active {
+  display: block;
 }
